# nrf-connectivity-usb

./: CMakeLists.txt  JDebug.jdebug  Makefile  ble_connectivity_gcc_nrf52.ld  main.c  toolchain-arm-none-eabi.cmake
config/: sdk_config.h  sdk_config_ant.h
sdk/: CMakeLists.txt  ser_config.h  ser_dfu_symbols.c  ser_phy_hci.c  ser_phy_hci_slip_qemu.c
